# USACO

./: .gitignore  calculate_accuracies.py  csv_to_jsonl.py  evaluate_streaming.py  extract_expert_passed.py  get_expert_trajectories.py  models.py  pyproject.toml  run_usaco.py  scores.csv  submit_jobs.py  utils.py
USACOBench/: utils.py
USACOBench/evaluation/judges/: codeforces_judge.py  sandbox_config.py  usaco_batch_judge.py  usaco_judge.py  usaco_utils.py
USACOBench/models/: gpt.py
USACOBench/tools/: sandbox.py  tools.py
data/: expert_passed_problems.json
